--- a/beginner/01/index.html
+++ b/beginner/01/index.html
@@ -38,8 +38,32 @@
                 </div>
             </div>
         </section>
+
+        <section id="bicycle" class="wrapper">
+            <h2 class="section-title">Bicycle</h2>
+            <ul>
+                <li>
+                    <img src="bicycle1.jpg">
+                    <h3 class="content-title">タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </li>
+                <li>
+                    <img src="bicycle2.jpg">
+                    <h3 class="content-title">タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </li>
+                </li>
+                <li>
+                    <img src="bicycle3.jpg">
+                    <h3 class="content-title">タイトルタイトル</h3>
+                    <p>テキストテキストテキスト</p>
+                </li>
+                </li>
+            </ul>
+        </section>
     </main>
-    <footer>
+    <footer id="footer">
+        <p>© 2023 Profile</p>
     </footer>
 </body>
 </html>
