定期コミット

--- a/beginner/03/index.html
+++ b/beginner/03/index.html
@@ -1,27 +1,72 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    
+    <title>PHOTO BOOK 2</title>
 </head>
+
 <body>
-    <header>
-        <div class="container">
-            <div class="header">
-                <h1>
+    <div class="container">
+        <header>
+            <div id="header">
+                <h1 class="site-title">
                     <a href="/">PHOTO BOOK 2</a>
                 </h1>
             </div>
-        </div>
-    </header>
-    <main>
-        
-    </main>
-    <footer>
+        </header>
+        <main>
+            <div id="mainvisual">
+                <img src="mainvisual.jpg" alt="">
+            </div>
 
-    </footer>
+            <div class="inner">
+                <section id="index">
+                    <h2 class="section-title">INDEX</h2>
+                    <div class="index-inner">
+                        <ol class="index-list">
+                            <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                            <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                            <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                            <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                            <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                        </ol>
+                    </div>
+                </section>
+                <ul class="list">
+                    <li><img src="photo1.jpg" alt=""></li>
+                    <li><img src="photo2.jpg" alt=""></li>
+                    <li><img src="photo3.jpg" alt=""></li>
+                    <li><img src="photo4.jpg" alt=""></li>
+                </ul>
+                <section id="detail">
+                    <h2>DETAL</h2>
+                    <div>
+                        <dl>
+                            <dt>著者</dt>
+                            <dd>タイトルタイトルタイトル</dd>
+                            <dt>出版社</dt>
+                            <dd>タイトルタイトルタイトル</dd>
+                            <dt>発行年</dt>
+                            <dd>2023年6月3日</dd>
+                        </dl>
+                        <div>
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <a href="/">オンラインストアで見る</a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
+
 </html>
