--- a/beginner/05/index.html
+++ b/beginner/05/index.html
@@ -9,13 +9,47 @@
 </head>
 <body>
     <main>
-        <div>
-            <div>
-                <img src="recipe.jpg" alt="">
+        <div id="main-content">
+            <div class="recipe-img">
+                <img src="recipe.jpg" alt="レシピ画像">
             </div>
-            <div>
+            <div class="recipe">
+                <h1>ひよこ豆とアボカドのタコス</h1>
+                <p>たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
+                <h2>材料（2人分）</h2>
+                <dl class="ingredient-list">
+                    <dt>テキストテキスト</dt>
+                    <dd>1個</dd>
+                    <dt>テキストテキスト</dt>
+                    <dd>1個</dd>
+                    <dt>テキストテキスト</dt>
+                    <dd>1個</dd>
+                    <dt>テキストテキスト</dt>
+                    <dd>1個</dd>
+                    <dt>テキストテキスト</dt>
+                    <dd>1個</dd>
+                </dl>
+                <h2>作り方</h2>
+                <ol class="step-list">
+                    <li>テキストテキストテキストテキスト</li>
+                    <li>テキストテキストテキストテキスト</li>
+                    <li>テキストテキストテキストテキスト</li>
+                    <li>テキストテキストテキストテキスト</li>
+                    <li>テキストテキストテキストテキスト</li>
+                </ol>
             </div>
         </div>
+        <div class="btn">
+            <a href="">レシピ一覧を見る</a>
+        </div>
     </main>
+    <footer id="footer">
+        <ul class="sns">
+            <li><a href="" class="f">Instagram</a></li>
+            <li><a href="" class="f">Twitter</a></li>
+            <li><a href="" class="f">Facebook</a></li>
+        </ul>
+        <p>© 2021 Recipe Diary</p>
+    </footer>
 </body>
 </html>
