--- a/beginner/06/index.html
+++ b/beginner/06/index.html
@@ -27,23 +27,25 @@
                 </div>
                 <div class="concept-message">
                     <h2>私たちの考えるジュエリーとは</h2>
-                    <p>Concept</p>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <span>Concept</span>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
-            <div class="work">
-                <div class="work-img">
-                    <img src="work1.jpg" alt="work">
+            <div class="concept concept-second">
+                <div class="concept-img">
+                    <img src="work.jpg" alt="work">
                 </div>
-                <div class="work-message">
-                    <h1>ハンドメイドにこだわる理由</h1>
-                    <p>Work</p>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                <div class="concept-message">
+                    <h2>ハンドメイドにこだわる理由</h2>
+                    <span>Work</span>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
         </div>
     </main>
-    <footer id="footer">
+    <footer id="footer" class="main-content">
         <p>Wooden Jewelry</p>
         <p>© 2021 Wooden Jewelry</p>
     </footer>
